--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ openssl (0.9.8c-4etch1) stable-security; urgency=low
 
   * CVE-2007-5135: Fix off by one error in SSL_get_shared_ciphers().
     (Closes: #444435)
+  * Add nagios-nrpe-server, clamav-freshclam and clamav-daemon
+    to the list of services to check for restart.
 
  -- Kurt Roeckx <kurt@roeckx.be>  Fri, 28 Sep 2007 19:57:00 +0200
 
