--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openssl (0.9.8g-15+lenny2) stable-security; urgency=low
+
+  * Fix "DTLS record buffer limitation bug." (CVE-2009-1377)
+
+ -- Kurt Roeckx <kurt@roeckx.be>  Mon, 01 Jun 2009 14:34:45 +0200
+
 openssl (0.9.8g-15+lenny1) stable-security; urgency=low
 
   * Properly validate the length of an encoded BMPString and UniversalString
